fix db and fix accountManager

--- a/Movies.WebApp/Views/Account/ListAccountManager.cshtml
+++ b/Movies.WebApp/Views/Account/ListAccountManager.cshtml
@@ -44,7 +44,7 @@
                             }
                             else
                             {
-                                <span class="text-danger"></span>
+                                <span class="text-danger">Ngừng Hoạt Động</span>
                             }
                         </td>
                         <td>
