--- a/Movies.WebApp/Views/Movie/WatchMovie.cshtml
+++ b/Movies.WebApp/Views/Movie/WatchMovie.cshtml
@@ -9,11 +9,11 @@
         </div>
         <div>
             <div id="video-container" style="max-width: 100%; margin: 0px auto; background-color: #fff; border-radius: 5px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); overflow: hidden;">
-                <video controls autoplay style="width: 100%; display: block;">
-                    <source src="movie.mp4" type="video/mp4">
+                <video controls autoplay style="height: 50%; display: block;">
+                    <source  src= "~/Images/5506836031156.mp4"  type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
-            </div>
+            </div> 
 
             <div class="d-flex justify-content-center align-items-center mb-3" style="color: white;">
                 <div style="font-weight: bold;">Server:</div>
