--- a/Movies.WebApp/Views/Asset/Login.cshtml
+++ b/Movies.WebApp/Views/Asset/Login.cshtml
@@ -62,8 +62,8 @@
     <div class="container mt-5 mb-5">
         <div class="row justify-content-center">
             <div class="col-12 col-md-8 col-lg-6">
-                <form method="post" class="form-container">
-                   
+                <form asp-action="Login" method="post" class="form-container">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="form-group">
                         <label for="userName">Tên Đăng Nhập</label>
                         <div class="input-group">
